--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "vendor/eigen"]
 	path = vendor/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+	branch = 3.4.0
+[submodule "vendor/gcem"]
+	path = vendor/gcem
+	url = https://github.com/kthohr/gcem.git
