--- a/core/.github/workflows/main.yml
+++ b/core/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
 
     - name: Install Dependencies
-      run: sudo apt-get install -y doxygen-latex poppler-utils
+      run: sudo apt-get update && sudo apt-get install -y doxygen-latex poppler-utils
 
 
         
